增加设置背景色

--- a/config.ini
+++ b/config.ini
@@ -1,39 +1,16 @@
-[BE]
-
-product=PDS
-
-host=192.168.2.244
-
-username=pds
-
-password=pdsclient
-
-ftppath=release/rar/exploreragency_vs2015_x64
-
-localPath=E:\ftp
-
-installPath=
+#配置文件说明：[]中的名称不要修改，product字段均为启动文件exe的名称，ftppath字段为各产品的ftp目录，每个版本需要调整一次，installPath字段为需要分支覆盖的整包路径
 
 
 
 [TJ]
 
-product=PDS
-
-host=192.168.2.244
-
-username=pds
-
-password=pdsclient
-
-ftppath=release/rar/govern_gzjg_x64
-
-localPath=E:\ftp
-
+product=
+host=
+username=
+password=
+ftppath=
+localPath=
 installPath=
-
-
-
 
 [AZ]
 
@@ -50,3 +27,77 @@ ftppath=all/rar/lbaz_newcomplie_x64/
 localPath=E:\ftp
 
 installPath=E:\fff\ftp\鲁班安装2018V19
+
+
+[GJ]
+product=
+host=
+username=
+password=
+ftppath=
+localPath=
+installPath=
+
+[XL]
+product=
+host=
+username=
+password=
+ftppath=
+localPath=
+installPath=
+
+[CB]
+product=
+host=
+username=
+password=
+ftppath=
+localPath=
+installPath=
+
+[PB]
+product=
+host=
+username=
+password=
+ftppath=
+localPath=
+installPath=
+
+[MJ]
+product=
+host=
+username=
+password=
+ftppath=
+localPath=
+installPath=
+
+[Revit]
+product=
+host=
+username=
+password=
+ftppath=
+localPath=
+installPath=
+
+[Tekla]
+product=
+host=
+username=
+password=
+ftppath=
+localPath=
+installPath=
+
+[Rhino]
+product=
+host=
+username=
+password=
+ftppath=
+localPath=
+installPath=
+
