--- a/config_pds.ini
+++ b/config_pds.ini
@@ -10,11 +10,11 @@ username=pds
 
 password=pdsclient
 
-ftppath=release/rar/exploreragency_vs2015_x64
-
+ftppath=
 localPath=E:\ftp
 
 installPath=
+
 
 
 
@@ -32,9 +32,21 @@ ftppath=
 localPath=E:\ftp
 
 installPath=
+
 [Govern]
 
+product=PDS
 
+host=192.168.2.244
+
+username=pds
+
+password=pdsclient
+
+ftppath=release/rar/govern_gzjg_x64
+localPath=E:\ftp
+
+installPath=
 
 [Plan]
 product=PDS
